Fix: Missing drop shadows and unreadable button coloring on hover (#451)
* Add:		Dark color scheme

* Fix:		Remove !important statements preventing forms to implement dark mode

* Fix:		Final color values

* Add:		Changelog entry
Fix:		Announce dark mode to the browser for scrollbar coloring

* Fix:		Disappearing shadows
Fix:		deprecation warning for /

* Fix:		Replace color literals by variables
Fix:		Leave more shadows dark in dark mode

--- a/djangocms_admin_style/sass/components/_content.scss
+++ b/djangocms_admin_style/sass/components/_content.scss
@@ -784,7 +784,7 @@ a.addlink {
     }
     > .current {
         color: $white !important;
-        text-shadow: 0 1px 1px rgba($black, 0.2);
+        text-shadow: 0 1px 1px rgba($black-fallback, 0.2);
         padding-right: 20px !important;
         padding-left: 20px !important;
         background: $color-primary;
