--- a/djangocms_admin_style/sass/mixins/_custom.scss
+++ b/djangocms_admin_style/sass/mixins/_custom.scss
@@ -77,15 +77,16 @@
     &[disabled] {
         &,
         &:hover,
-        &:focus
+        &:focus,
         &:active {
-            background-color: rgba($background, 0.4) important($important);
+            background-color: $background important($important);
+            opacity: 0.4;
             border-color: rgba($border, 0.4) important($important);
             color: rgba($color, 0.8) important(1);
             cursor: not-allowed;
             box-shadow: none important($important);
             &:before {
-                color: rgba($color, 0.4) important(1);
+                opacity: 0.4 important(1);
             }
         }
     }
